--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>OSS License Visualizer</title>
         <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="lib/bootstrap-fileinput/css/fileinput.min.css" rel="stylesheet">
+        <link href="lib/bootstrap-sweetalert/lib/sweet-alert.css" rel="stylesheet">
         <link href="lib/vis/dist/vis.min.css" rel="stylesheet">
         <link href="css/index.css" rel="stylesheet">
     </head>
@@ -28,6 +29,7 @@
         
         <script src="lib/jquery/dist/jquery.min.js"></script>
         <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="lib/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
         <script src="lib/bootstrap-fileinput/js/fileinput.min.js"></script>
         <script src="lib/vis/dist/vis.min.js"></script>
         <script src="js/graph.js"></script>
