dot format is now accepted as input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="graph-browse jumbotron">
                 <h1>Visualize your graph</h1>
-                <p><i>Browse your .dot file and press &quot;Visualize&quot; to visualy represent your graph.</i></p>
+                <p><i>Browse your rdf, owl, ttl file and press &quot;Visualize&quot; to visualy represent your graph.</i></p>
                 <form type="post" id="uploadForm" action="" enctype="multipart/form-data">
                     <div class="form-group">
                         <input id="dotInput" name="dotInput" type="file" class="file" data-preview-file-type="text">
